# lekhah

./: LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/notebooks/: nbs.ipynb
